logs/dag_id=Projet1/run_id=manual__2023-11-15T17:59:17.410168+00:00/task_id=create_table/attempt=1.log
[2023-11-15T17:59:22.997+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-15T17:59:17.410168+00:00 [queued]>
[2023-11-15T17:59:23.007+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-15T17:59:17.410168+00:00 [queued]>
[2023-11-15T17:59:23.008+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-15T17:59:23.021+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-15 17:59:17.410168+00:00
[2023-11-15T17:59:23.028+0000] {standard_task_runner.py:57} INFO - Started process 55259 to run task
[2023-11-15T17:59:23.031+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'create_table', 'manual__2023-11-15T17:59:17.410168+00:00', '--job-id', '208', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpcktc4qex']
[2023-11-15T17:59:23.033+0000] {standard_task_runner.py:85} INFO - Job 208: Subtask create_table
[2023-11-15T17:59:23.084+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.create_table manual__2023-11-15T17:59:17.410168+00:00 [running]> on host fb26c01043df
[2023-11-15T17:59:23.168+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-15T17:59:17.410168+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-15T17:59:17.410168+00:00'
[2023-11-15T17:59:23.171+0000] {sql.py:274} INFO - Executing: CREATE TABLE IF NOT EXISTS Urgences(
sursaud_cl_age_corona FLOAT, 
nbre_pass_corona FLOAT, 
nbre_pass_tot FLOAT, 
nbre_hospit_corona FLOAT,
nbre_pass_corona_h FLOAT, 
nbre_pass_corona_f FLOAT, 
nbre_pass_tot_h FLOAT, 
nbre_pass_tot_f FLOAT,
nbre_hospit_corona_h FLOAT, 
nbre_hospit_corona_f FLOAT, 
nbre_acte_corona FLOAT, 
nbre_acte_tot FLOAT,
nbre_acte_corona_h FLOAT, 
nbre_acte_corona_f FLOAT, 
nbre_acte_tot_h FLOAT, 
nbre_acte_tot_f FLOAT
[2023-11-15T17:59:23.182+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-15T17:59:23.190+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-15T17:59:23.200+0000] {sql.py:418} INFO - Running statement: CREATE TABLE IF NOT EXISTS Urgences(
sursaud_cl_age_corona FLOAT, 
nbre_pass_corona FLOAT, 
nbre_pass_tot FLOAT, 
nbre_hospit_corona FLOAT,
nbre_pass_corona_h FLOAT, 
nbre_pass_corona_f FLOAT, 
nbre_pass_tot_h FLOAT, 
nbre_pass_tot_f FLOAT,
nbre_hospit_corona_h FLOAT, 
nbre_hospit_corona_f FLOAT, 
nbre_acte_corona FLOAT, 
nbre_acte_tot FLOAT,
nbre_acte_corona_h FLOAT, 
nbre_acte_corona_f FLOAT, 
nbre_acte_tot_h FLOAT, 
nbre_acte_tot_f FLOAT, parameters: None
[2023-11-15T17:59:23.202+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 17: nbre_acte_tot_f FLOAT
                              ^

[2023-11-15T17:59:23.212+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet1, task_id=create_table, execution_date=20231115T175917, start_date=20231115T175922, end_date=20231115T175923
[2023-11-15T17:59:23.226+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 208 for task create_table (syntax error at end of input
LINE 17: nbre_acte_tot_f FLOAT
                              ^
; 55259)
[2023-11-15T17:59:23.245+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-15T17:59:23.263+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
